--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>学校管理系统</title>
+    <title>学校管理系统wxb</title>
 	
     <meta http-equiv="keywords" content="培训学校管理系统,培训学校系统,培训学校教务系统">
     <meta http-equiv="description" content="培训学校管理系统">
