--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>学校管理系统wxb</title>
-	
+    <title>学校管理系统linlu wxb</title>
+
     <meta http-equiv="keywords" content="培训学校管理系统,培训学校系统,培训学校教务系统">
     <meta http-equiv="description" content="培训学校管理系统">
     <meta http-equiv="content-type" content="text/html" charset="UTF-8">
