push add for homer

--- a/public/tpls/default/sidebar.html
+++ b/public/tpls/default/sidebar.html
@@ -41,7 +41,7 @@
                         用户管理</a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#sys-role.html">
                         <i class="icon-globe"></i>
                         角色管理</a>
                 </li>
