push add for homer

--- a/public/tpls/default/sidebar.html
+++ b/public/tpls/default/sidebar.html
@@ -41,14 +41,28 @@
                         用户管理</a>
                 </li>
                 <li>
-                    <a href="#sys-role.html">
+                    <a href="#/sys-role.html">
                         <i class="icon-globe"></i>
                         角色管理</a>
                 </li>
                 <li>
-                    <a href="#/sys-model.html">
+                    <a href="javascript:;">
                         <i class="icon-support"></i>
-                        模块管理</a>
+                        <span class="title">模块管理</span>
+                    <span class="arrow "></span>
+                    </a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="#/sys-addmodel.html">
+                                    <i class="icon-direction"></i>
+                                    模块编辑</a>
+                            </li>
+                            <li>
+                                <a href="#/sys-model.html">
+                                    <i class="icon-puzzle"></i>
+                                    模块管理</a>
+                            </li>
+                        </ul>
                 </li>
             </ul>
         </li>
