push add for homer

--- a/public/tpls/default/sidebar.html
+++ b/public/tpls/default/sidebar.html
@@ -60,7 +60,7 @@
                             <li>
                                 <a href="#/sys-model.html">
                                     <i class="icon-puzzle"></i>
-                                    模块管理</a>
+                                    模块列表</a>
                             </li>
                         </ul>
                 </li>
