--- a/public/tpls/default/sidebar.html
+++ b/public/tpls/default/sidebar.html
@@ -22,7 +22,7 @@
 			</form>
 			<!-- END RESPONSIVE QUICK SEARCH FORM -->
 		</li>
-        <li class="start">
+        <li class="active">
             <a href="#/dashboard.html">
                 <i class="icon-home"></i>
                 <span class="title">主页</span>
