push add for homer

--- a/public/tpls/default/sidebar.html
+++ b/public/tpls/default/sidebar.html
@@ -66,6 +66,77 @@
                 </li>
             </ul>
         </li>
-	</ul>
+        <li>
+            <a href="javascript:;">
+                <i class="icon-user-following"></i>
+                <span class="title">个人中心</span>
+                <span class="arrow "></span>
+            </a>
+            <ul class="sub-menu">
+                <li>
+                    <a href="javascript:;">
+                        <i class="icon-feed"></i>
+                        新闻公告
+                        <span class="arrow "></span>
+                    </a>
+                    <ul  class="sub-menu">
+                        <li>
+                            <a href="#/sys-addnews/sys-addnews.html">
+                                <i class="icon-share"></i>
+                                发布新闻</a>
+                        </li>
+                        <li>
+                            <a href="#/sys-news/sys-news.html">
+                                <i class="icon-share-alt"></i>
+                                新闻列表</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="javascript:;">
+                        <i class="icon-envelope"></i>
+                        即时信息
+                        <span class="arrow"></span>
+                    </a>
+                    <ul  class="sub-menu">
+                        <li>
+                            <a href="#/sys-addmessage/sys-addmessage.html">
+                                <i class="icon-envelope-open"></i>
+                                发信息</a>
+                        </li>
+                        <li>
+                            <a href="#/sys-messagelist/sys-messagelist.html">
+                                <i class="icon-envelope-letter"></i>
+                                信息列表</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="javascript:;">
+                        <i class="icon-notebook"></i>
+                        个人便签
+                        <span class="arrow "></span>
+                    </a>
+                    <ul  class="sub-menu">
+                        <li>
+                            <a href="#/sys-addsticker/sys-addsticker.html">
+                                <i class="icon-book-open"></i>
+                                添加便签</a>
+                        </li>
+                        <li>
+                            <a href="#/sys-stickerlist/sys-stickerlist.html">
+                                <i class="icon-map"></i>
+                                便签列表</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#/sys-modifypr.html">
+                        <i class="icon-lock"></i>
+                        修改密码</a>
+                </li>
+            </ul>
+        </li>
+     </ul>
 	<!-- END SIDEBAR MENU -->
 </div>	
