push add for homer

--- a/public/tpls/default/sidebar.html
+++ b/public/tpls/default/sidebar.html
@@ -75,7 +75,7 @@
             <ul class="sub-menu">
                 <li>
                     <a href="javascript:;">
-                        <i class="icon-feed"></i>
+                        <i class="icon-bell"></i>
                         新闻公告
                         <span class="arrow "></span>
                     </a>
