--- a/public/tpls/default/header.html
+++ b/public/tpls/default/header.html
@@ -178,13 +178,13 @@
                     </li>
                     <li>
                         <a href="inbox.html">
-                            <i class="icon-envelope-open"></i> 我的信息 <span class="badge badge-danger">
+                            <i class="icon-envelope"></i> 我的信息 <span class="badge badge-danger">
 							3 </span>
                         </a>
                     </li>
                     <li>
                         <a href="page_todo.html">
-                            <i class="icon-rocket"></i> 我的便签 <span class="badge badge-success">
+                            <i class="icon-notebook"></i> 我的便签 <span class="badge badge-success">
 							7 </span>
                         </a>
                     </li>
