push add for   clender change pad

--- a/public/tpls/default/sidebar.html
+++ b/public/tpls/default/sidebar.html
@@ -81,12 +81,12 @@
                     </a>
                     <ul  class="sub-menu">
                         <li>
-                            <a href="#/sys-addnews/sys-addnews.html">
+                            <a href="#/sys-addnews.html">
                                 <i class="icon-share"></i>
                                 发布新闻</a>
                         </li>
                         <li>
-                            <a href="#/sys-news/sys-news.html">
+                            <a href="#/sys-news.html">
                                 <i class="icon-share-alt"></i>
                                 新闻列表</a>
                         </li>
@@ -100,12 +100,12 @@
                     </a>
                     <ul  class="sub-menu">
                         <li>
-                            <a href="#/sys-addmessage/sys-addmessage.html">
+                            <a href="#/sys-addmessage.html">
                                 <i class="icon-envelope-open"></i>
                                 发信息</a>
                         </li>
                         <li>
-                            <a href="#/sys-messagelist/sys-messagelist.html">
+                            <a href="#/sys-messagelist.html">
                                 <i class="icon-envelope-letter"></i>
                                 信息列表</a>
                         </li>
@@ -119,12 +119,12 @@
                     </a>
                     <ul  class="sub-menu">
                         <li>
-                            <a href="#/sys-addsticker/sys-addsticker.html">
+                            <a href="#/sys-addsticker.html">
                                 <i class="icon-book-open"></i>
                                 添加便签</a>
                         </li>
                         <li>
-                            <a href="#/sys-stickerlist/sys-stickerlist.html">
+                            <a href="#/sys-stickerlist.html">
                                 <i class="icon-map"></i>
                                 便签列表</a>
                         </li>
